--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mtillmann/circlepacker",
-  "version": "0.1.6",
+  "version": "0.2.0",
   "description": "simple circle-packing library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -40,10 +40,12 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-url": "^8.0.2",
     "eslint": "^9.16.0",
     "neostandard": "^0.11.9",
     "rimraf": "^6.0.1",
     "rollup": "^2.79.2",
+    "terser": "^5.37.0",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   }
