--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ES6",
+    "target": "es2022",
+    "module": "es2022",
     "declaration": true,
     "strict": true,
     "moduleResolution": "node",
